--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "caniuse-lite": "^1.0.30001179",
     "dayjs": "^1.10.4",
     "ethers-multicall-x": "^0.2.6",
+    "g": "^2.0.1",
     "lodash": "^4.17.21",
     "node-sass": "^4.14.1",
     "qs": "^6.10.1",
@@ -49,7 +50,8 @@
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.12",
     "web3": "^1.3.0",
-    "web3modal": "^1.9.3"
+    "web3modal": "^1.9.3",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "npx react-scripts start",
